components: optionGroup, dataset, select bug, wrapper buttons -  optionGroup, set z-index on 1 because of ::before element -  optionGroup, padding on single option - dataset.items on dropdown - select bug resolved - wrapper  for buttons, margins  auto set - folder for components - clear dropdown filter

--- a/styles/aft/aft-filter.css
+++ b/styles/aft/aft-filter.css
@@ -52,7 +52,7 @@
 }
 
 #aft-advance-table-filter-active>div:last-child {
-    padding-right: 0.5rem
+    margin: auto;
 }
 
 .aft-advance-active {
