--- a/styles/components/dropdown.css
+++ b/styles/components/dropdown.css
@@ -33,12 +33,18 @@
     background: rgb(38, 50, 56);
     position: absolute;
     box-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
 
 .default-select>div:not(:first-child)>div {
     padding-left: 0.5rem;
     width: 120px;
     overflow: hidden;
+}
+
+.default-select>div:not(:first-child)>div.single-option {
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
 }
 
 .default-select>div:not(:first-child)>div>label>div {
